<resources>

    <string name="app_name" translatable="false">Ketaylik</string>
    <string name="google_map_api" translatable="false">AIzaSyBe4k_EpgY-9pgkV8UBGde3Qq-9lztqFDM</string>
    <string name="splash_message">Tezkor yetkazib berish xizmati</string>
    <string name="phone_hint">Telefon raqam</string>
    <string name="loading">Yuklanmoqda</string>
    <string name="confirm">Tasdiqlash</string>
    <string name="send_code">Tasdiqlash ko\'di yuborildi</string>
    <string name="confirm_code">Tasdiqlash ko\'di</string>
    <string name="title_activity_home">Bosh_oyna</string>
    <string name="title_home">Bosh sahifa</string>
    <string name="title_dashboard">Boshqaruv paneli</string>
    <string name="title_notifications">Ogohlantirish</string>
    <string name="title_card">Korzina</string>
    <string name="title_profile">Profil</string>
    <string name="title_favorite">Sevimlilar</string>
    <string name="authorization">Ro\'yhatdan o\'tish</string>
    <string name="auction">Aksiya va chegirmalar</string>
    <string name="delivery_price">Eltish narxi</string>
    <string name="min_order_price">Minimal</string>
    <string name="delivery">Yetkazish</string>
    <string name="description">Tavsif</string>
    <string name="add_to_cart">Savatga qo\'shish</string>
    <string name="search_hint">Qidirish</string>
    <string name="sended">Muvofaqqiyatli yuborildi</string>
    <string name="favourites">Sevimlilar</string>
    <string name="create_order">Buyurtma qilish</string>
    <string name="wishlist_is_empty">Tanlanganlar mavjud emas!</string>
    <string name="search">Qidirish</string>
    <string name="order_details">Buyurtma tafsilotlari</string>
    <string name="name">Ism</string>
    <string name="phone">Tel</string>
    <string name="address">Manzil</string>
    <string name="comment">Izoh</string>
    <string name="promo_code">Promo kod</string>
    <string name="order_price">Yetkazish narxi:</string>
    <string name="total_price">Umumiy to\'lov:</string>
    <string name="send_order">Buyurtma berish</string>
    <string name="information">Qo\'shimcha ma\'lumotlar</string>
    <string name="choose_location">Manzilni tanlang</string>
    <string name="notification">Ogohlantirish</string>
    <string name="cart_delete_other_res">Savatchada boshqa bo\'limdan buyurtmalar mavjud ular o\'chirilsinmi?</string>
    <string name="positive_button_text">Ha</string>
    <string name="negative_button_text">Yo\'q</string>
    <string name="type">Tur</string>
    <string name="orders">Buyurtmalar</string>
    <string name="order_id">\Buyurtma №: \</string>
    <string name="order_pending">Buyurtma kutishda</string>
    <string name="order_send">Buyurtma yubborildi</string>
    <string name="order_received">Buyurtma qabul qilindi</string>
    <string name="cancelled_by_restaurant">Restoran bekor qildi</string>
    <string name="order_in_delivery_man">Buyurtma yekazuvchida</string>
    <string name="order_at_way">Buyurtma yo\'lda</string>
    <string name="cancelled_by_customer">Bekor qilingan</string>
    <string name="received_by_customer">Qabul qilingan</string>
    <string name="order_time">Buyurtma vaqti</string>
    <string name="error_phone_number">Telefon nomer xato</string>
    <string name="no_internet">Xatolik yoki internet mavjud emas!!!</string>
    <string name="error_code">Kod xato kiritildi</string>
    <string name="phone_number_not_found">Telefon nomer topilmadi</string>
    <string name="reenter_phone_number">Telefon nomerni qayta kiriting!!!</string>
    <string name="error_toast">Xatolik yuz berdi</string>
    <string name="no_params">Parametrlar yertarli emas</string>
    <string name="pending">Tasdiqlanishi kutilmoqda</string>
    <string name="order_created">Buyurtma tasdiqlandi</string>
    <string name="order_making">Tayyorlanmoqda</string>
    <string name="received_by_delivery_man">Yetkazuvchi qabul qildi</string>
    <string name="status_delivered">Qabul qilingan</string>
    <string name="name_account">Ism</string>
    <string name="choose_language">Tilni tanlang</string>
    <string name="choose_lang">Tilni tanlang</string>
    <string name="uzbek">O\'zbekcha</string>
    <string name="russian">Ruscha</string>
    <string name="save">Saqlash</string>
    <string name="save_name">ismni saqlash</string>
    <string name="saved_chenges">O\'zgarishlar saqlandi</string>
    <string name="cart">Savatcha</string>
    <string name="name_is_empty">Ism maydoni bo\'sh</string>
    <string name="phone_is_emty">Telefon maydoni bo\'sh</string>
    <string name="address_is_empty">Manzil maydoni bo\'sh</string>
    <string name="congratulate">Tabriklaymiz!!!</string>
    <string name="order_send_successfuly">Buyurtmangiz muvofaqqiyatli yuborildi</string>
    <string name="min_order_amount_less">Kechirasiz minimal buyurtma narxidan kam buyurtma qildingiz</string>
    <string name="delivery_price_null">Yetkazib berish narxi aniqlanmadi</string>
    <string name="all">Hammasi</string>
    <string name="close">Yopiq</string>
    <string name="sending">Yuborilmoqda</string>
    <string name="log_out">Chiqish</string>
    <string name="cancel">Bekor qilish</string>
    <string name="cancelled">Bekor qilingan</string>
    <string name="received">Yetkazilgan</string>
    <string name="on_courier">Kuryerda</string>
    <string name="preparing">Tayyorlanmoqda</string>
    <string name="english">Inglizcha</string>
    <string name="order_information">Buyurtma malumotlari</string>
    <string name="enter_name">Ismni kiriting</string>
    <string name="profil">Profil</string>
    <string name="want_log_out">Profilni o\'chirishni xohlaysizmi?</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="sum">so\'m</string>
    <string name="not_enough_parametrs">Malumotlar yetarli emas</string>
    <string name="phone_number_invalid">Bunday raqam mavjud emas</string>
    <string name="too_many_tries">Ko\'p marta urinish, Keyinroq xarakat qilib ko\'ring</string>
    <string name="unknow_query_error">So\'rovda xatolik yuzberdi</string>
    <string name="code_is_expired">Ko\'d muddati tugagan</string>
    <string name="token_not_found">Token topilmadi</string>
    <string name="customer_not_found">Xaridor topilmadi</string>
    <string name="invalid_order_amount">Buyurtma summasi noto\'g\'ri ko\'rsatildi</string>
    <string name="no_orders">Buyurtmalar mavjud emas!</string>
    <string name="res_is_close">Bu bo\'lim ish faoliyatida emas</string>
    <string name="product_count">Mahsulot soni:</string>
    <string name="products_price">Mahsulotlar narxi:</string>
    <string name="ta">" ta"</string>
    <string name="min">" min"</string>
    <string name="do_you_cancel">Buyurtmani bekor qilasizmi?</string>
    <string name="support_center">Qo\'llab-quvvatlash markazi</string>
    <string name="this_area_not_valid">Bu hududga xizmat ko\'rsatilmaydi. Boshqa manzil tanlang.</string>
    <string name="gps_turn_on">GPS sozlamasi o\'chiq. Dasturdan to\'g\'ri foydalanish uchun yoqing!</string>
    <string name="not_serviced">Kechirasiz, Bu hududga xizmat ko\'rsatilmaydi.</string>
    <string name="location_problem">Lokatsiya aniqlashda muammo\nGPS va internet sozlamalarini tekshiring</string>
    <string name="get_address_from_coordinates">Manzil kordinata bo\'yicha olindi</string>
    <string name="qayta_urinish">Qayta urinish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="qidirish">Qidirish</string>
    <string name="malumot_topilmadi">Malumot topilmadi</string>
    <string name="delete_account">Hisobni o\'chirib tashlash va dasturdan chiqish!</string>
    <string name="title_activity_maps">Map</string>
</resources>