<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="info.texnoman.foodorder.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="info.texnoman.foodorder.fragments.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="info.texnoman.foodorder.fragments.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/navigation_order"
        android:name="info.texnoman.foodorder.fragments.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order" />

</navigation>