<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_5dp"
    tools:context="info.texnoman.foodorder.PlaceOrderActivity">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onBackPress"
            android:src="@drawable/back_button_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/order_information"
            android:textColor="@color/blackText"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:background="@drawable/background_category_green"
                    android:paddingLeft="@dimen/size_5dp"
                    android:paddingTop="@dimen/size_2dp"
                    android:paddingRight="@dimen/size_5dp"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/size_2dp"
                    android:text="@string/order_details"
                    android:textColor="@color/white" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linearlayout_editable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/name"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_10sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="@dimen/size_10dp"
                        android:layout_marginRight="@dimen/size_10dp"
                        android:hint="@string/enter_name"
                        android:textSize="@dimen/text_14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/edit_icon"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/size_5dp"
                        android:layout_marginRight="@dimen/size_5dp"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/phone"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginRight="@dimen/size_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phone_998"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="0dp"
                        android:inputType="none"

                        android:text="+998"
                        android:textSize="@dimen/text_14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/edit_icon"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="@dimen/size_5dp"/>
                        <EditText
                            android:id="@+id/phone_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:textSize="@dimen/text_14sp" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_10dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/address"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_10sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:layout_marginRight="@dimen/size_10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/choose_location"
                        android:textSize="@dimen/text_14sp" />

                    <ImageView
                        android:layout_width="@dimen/size_30dp"
                        android:layout_height="@dimen/size_30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:onClick="getLocation"
                        android:src="@drawable/ic_location_on_accent_24dp" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_category_green"
                android:paddingLeft="@dimen/size_5dp"
                android:paddingTop="@dimen/size_2dp"
                android:paddingRight="@dimen/size_5dp"
                android:paddingBottom="@dimen/size_2dp"
                android:text="@string/information"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:text="@string/comment"
                android:textColor="@color/blackText"
                android:textSize="@dimen/text_10sp" />

            <EditText
                android:id="@+id/comment_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:text=""
                android:textSize="@dimen/text_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_5dp"
                android:text="@string/promo_code"
                android:textColor="@color/blackText"
                android:textSize="@dimen/text_10sp"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/promo_code_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:text=""
                android:textSize="@dimen/text_14sp"
                android:visibility="gone"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginTop="@dimen/size_25dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:padding="@dimen/size_15dp">

                <ImageView
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_20dp"
                    android:scaleX="-1"
                    android:src="@drawable/delivery_boy2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:text="@string/order_price"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/delivery_price_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text=""
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/delivery_price_textview"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/product_count"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />

                <ImageView
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_below="@id/delivery_price_textview"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:scaleX="-1"
                    android:src="@drawable/icon_cart_black" />

                <TextView
                    android:id="@+id/order_quantity_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/delivery_price_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text=""
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />

                <ImageView
                    android:layout_width="@dimen/size_20dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_below="@+id/order_quantity_textview"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:src="@drawable/icon_money" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/order_quantity_textview"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text="@string/products_price"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/orders_price_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/order_quantity_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:text=""
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_25dp"
                android:orientation="horizontal"
                android:scaleY="0.9">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/total_price"
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/total_price_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/size_5dp"
                    android:text=""
                    android:textColor="@color/blackText"
                    android:textSize="@dimen/text_18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:layout_marginBottom="@dimen/size_15dp"
        android:background="@drawable/background_order_button"
        android:text="@string/send_order"
        android:textColor="@color/white" />
</RelativeLayout>