<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/size_15dp"
    android:backgroundTint="@color/light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/size_10dp"
                android:paddingBottom="@dimen/size_10dp"
                android:paddingRight="@dimen/size_16dp"
                android:paddingLeft="@dimen/size_16dp">
                <RadioButton
                    android:id="@+id/radio_uzbek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uzbek"
                    android:textSize="@dimen/text_16sp"
                    android:button="@android:color/transparent"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/blackText"
                    android:alpha="0.7"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_marginBottom="@dimen/size_5dp"/>
                <RadioButton
                    android:id="@+id/radio_rus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/russian"
                    android:textSize="@dimen/text_16sp"
                    android:button="@android:color/transparent"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/blackText"
                    android:alpha="0.7"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_marginBottom="@dimen/size_5dp"/>
                <RadioButton
                    android:id="@+id/radio_en"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textSize="@dimen/text_16sp"
                    android:button="@android:color/transparent"
                    />
            </RadioGroup>

</LinearLayout>
